--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,19 @@
 [package]
 name = "rusted"
-version = "0.1.0"
+version = "0.0.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+name = "rusted"
+path = "src/lib.rs"
+
 [dependencies]
+clap = { version = "4.5.4", features = ["derive"] }
+pyo3 = "0.21.2"
+config = "0.14.0"
+serde = { version = "1.0.199", features = ["derive"] }
+regex = "1.10.4"
+toml = "0.8.12"
+serde_json = "1.0.116"
