--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [lib]
 name = "rusted"
 path = "src/lib.rs"
+crate-type = ["cdylib"]
 
 [dependencies]
 clap = { version = "4.5.4", features = ["derive"] }
