--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 clap = { version = "4.5.4", features = ["derive"] }
-pyo3 = "0.21.2"
+pyo3 = { version = "0.21.2", features = ["extension-module"] }
 config = "0.14.0"
 serde = { version = "1.0.199", features = ["derive"] }
 regex = "1.10.4"
