--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,12 @@ edition = "2021"
 [lib]
 name = "rusted"
 path = "src/lib.rs"
-crate-type = ["cdylib"]
+crate-type = ["lib", "cdylib"]
+
+[[bin]]
+name = "rusted"
+path = "src/main.rs"
+
 
 [dependencies]
 clap = { version = "4.5.4", features = ["derive"] }
