Add ai command using ollama, rand and venv functionality
Purposely avoiding importing a rand crate, trying to minimalize external crates.

--- a/config-example.toml
+++ b/config-example.toml
@@ -1,5 +1,7 @@
 [local]
 public_ssh_key = "{HOME}/.ssh/.id_rsa.pub"
+ai_interface = "ollama"
+model = "mistral"
 
 [auth.executor]
 host = "192.168.0.10"
